--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allprojects {
         box2DLightsVersion = '1.3'
         ashleyVersion = '1.3.1'
         aiVersion = '1.5.0'
+        jacksonVersion = '2.5.2'
     }
 
     repositories {
@@ -55,6 +56,7 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+        compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
     }
 }
 
