--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,8 @@ project(":core") {
     apply plugin: "java"
 
     dependencies {
+        compile fileTree(dir: "libs", include: "*.jar")
+
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
